<resources>
    <string name="app_name">CookAssist</string>
    <string name="products">Продукты</string>
    <string name="recipes">Рецепты</string>
    <string name="favorite">Любимые</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Название продукта</string>
    <string name="product_count">Количество продукта</string>
    <string name="product_calories">Калорийность продукта</string>
    <string name="search">Поиск</string>
    <string name="new_product">Новый продукт</string>
    <string name="search_hint">Поиск</string>
    <string name="title_dashboard">Products</string>
    <string name="title_notifications">FavoriteRecipes</string>
    <string name="enter_product_count">Введите количество продукта</string>
    <string name="enter_product_name">Введите название продукта</string>
    <string name="enter_recipe_name">Введите название рецепта</string>
    <string name="enter_products">Пожалуйста, заполните поля</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_two">ActivityTwo</string>
    <string name="settings">Настройки</string>
    <string name="action_search">Gjbcr</string>
    <string name="add">Добавление</string>
    <string name="action_search2">Поиск</string>
    <string name="title_home">Home</string>
    <string name="text">sdf</string>

    <!-- Main screen -->
    <string name="activity_main_vertical_linear_sample_button">Vertical Linear Sample</string>
    <string name="activity_main_horizontal_linear_sample_button">Horizontal Linear Sample</string>
    <string name="activity_main_grid_sample_button">Grid Layout Sample</string>
    <string name="activity_main_header">Expanding RecyclerView</string>
    <string name="coming_soon">Feature coming soon</string>

    <!-- Linear sample -->
    <string name="activity_vertical_linear_sample_title">Vertical Linear Sample</string>
    <string name="activity_horizontal_linear_sample_title">Horizontal Linear Sample</string>
    <string name="toolbar_sample_checkBox">Custom Expand Button</string>
    <string name="child_text">Child %1$d</string>
    <string name="second_child_text">Child %1$d_2</string>
    <string name="third_child_text">Child %1$d_3</string>
    <string name="child_insert_text">Child of inserted #%1$d</string>
    <string name="parent_text">Parent %1$d</string>
    <string name="inserted_parent_text">Inserted Parent</string>
    <string name="arrow_contentDescription">Expand list item arrow</string>
    <string name="item_expanded">Item %1$d expanded</string>
    <string name="item_collapsed">Item %1$d collapsed</string>
    <string name="expand_parent_two">Expand parent 2</string>
    <string name="collapse_parent_two">Collapse parent 2</string>
    <string name="expand_all">Expand all parents</string>
    <string name="collapse_all">Collapse all parents</string>
    <string name="add_item_to_end">Add parent to end</string>
    <string name="remove_item_from_end">Remove parent from end</string>
    <string name="add_item_at_pos_two">Add parent @ pos 1</string>
    <string name="remove_second_pos">Remove parent @ pos 1</string>
    <string name="add_child">Add child to end of 2nd parent</string>
    <string name="remove_child">Remove child on 2nd parent from pos 1</string>
    <string name="added_child">Child Addition %1$d</string>
    <string name="add_multiple_parents">Add 2 Parents @ pos 1</string>
    <string name="modify_last_parent">Modify last Parent</string>
    <string name="modify_last_child">Modify last Child</string>
    <string name="modified_parent_text">modified %1$d</string>
    <string name="modified_child_text">modified Child %1$d</string>
    <string name="expand_range">Expand parents 4–6</string>
    <string name="collapse_range">Collapse parents 2–5</string>
    <string name="add_two_children">Add two children to last parent</string>
    <string name="remove_two_children">Remove two children from last parent</string>
    <string name="modify_two_children">Modify two children from last parent</string>
    <string name="remove_two_parents">Remove last two Parents</string>
    <string name="modify_two_parents">Modify last two Parents</string>
    <string name="parent_move">Move parent @ pos 1 to pos 3</string>
    <string name="child_move">On Parent @ pos 1, move child from pos 0 to end</string>


    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>


    <!-- Sample Toolbar -->
    <string name="no_animation">No animation</string>
    <string name="spinner_adapter_time_s">1 s</string>
    <string name="spinner_adapter_time_ms">%1$d ms</string>
    <string name="sdfsdfdsfds">sdfsdfdsfds</string>
    <string name="new_receipt">Новый рецепт</string>

</resources>
