<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    tools:context="info.androidhive.recyclerviewsearch.MainActivity">

    <item
        android:id="@+id/settings_button"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="100">
    </item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/add"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:orderInCategory="300"
        android:icon="@drawable/add_btn1">
    </item>

</menu>