<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/product_name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/product_name"
        app:backgroundTint="@color/app_bar_red"
        tools:ignore="MissingPrefix"/>
    <EditText
        android:id="@+id/product_count"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/product_count"
        app:backgroundTint="@color/app_bar_red"
        tools:ignore="MissingPrefix"/>
    <EditText
        android:id="@+id/product_calories"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/product_calories"
        app:backgroundTint="@color/app_bar_red"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/error_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:textColor="@color/md_red_700"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />
</LinearLayout>